[package]
name = "random-string-rs"
version = "0.1.0"
authors = ["masa-suzu <11026517+masa-suzu@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5.0.0"
rand = "0.7.0"
rand_xoshiro = "0.3.1"